2016-11-23 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix wrong size in popup selection.

2016-07-04 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
        Load and update in separate thread.

2016-06-27 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
        Enable search menu.

2016-06-27 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
        Re-filter after sorting.

2016-06-24 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.h
	* DBObjectInspector.m
        * English.lproj/ObjectInspector.nib
        Allow filtering of columns by content - currently by developer name

2016-06-22 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* AppController.m
	* Resources/Preferences.gorm
	Introduce preference tu filter out Share and History objects and use it in Insert and Update PopUps

2016-06-17 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	Visually mark updateable and updated cells.

2016-06-17 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
        Make cells editable/noneditable for non-updateable fiels.

2016-06-15 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	Skip udpate list if value did not change, skip non-updateable fields.

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.h
        * DBObjectInspector.m
        * English.lproj/ObjectInspector.nib
        Edit values and Update from object inspector.

2016-04-19 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Set batch sizes when instantiating DBSoap.

2016-03-16 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Reset UI after insert completion

2015-12-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix Preferences defaults, do not set them wrongly on panel show.

2015-09-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Separate exception panel show in separate method and always call it on main thread (or sometimes old exception was shown).

2015-06-04 Riccardo Mottola <rm@gnu.org>
